[package]
name = "nxtusb"
version = "0.1.0"
edition = "2021"
authors = ["David Young <david@thedavidyoung.co.uk>"]
license = "MPL-2.0"
repository = "https://github.com/bricks-rs/nxtusb"
readme = "README.md"
description = "USB driver for communicating with the NXT brick"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "gui"
required-features = ["examples"]

[features]
examples = ["dep:eframe", "strum"]
strum = ["dep:strum", "dep:strum_macros"]

[dependencies]
num-derive = "0.4"
num-traits = "0.2"
rusb = "0.9"
thiserror = "1"

strum = { version = "0.25", optional = true }
strum_macros = { version = "0.25", optional = true }

# required for gui
eframe = { version = "0.24", optional = true }
